force-app/main/default/objects/Order/fields/AmountAfterDiscount__c.field-meta.xml
<CustomField>
    <fullName>AmountAfterDiscount__c</fullName>
    <formula>TotalAmount - DiscountedAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount After Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>