force-app/main/default/objects/Order/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discount</label>
    <referenceTo>Discount__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>