force-app/main/default/objects/Order/fields/DiscountedAmount__c.field-meta.xml
<CustomField>
    <fullName>DiscountedAmount__c</fullName>
    <label>Discounted Amount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>