force-app/main/default/objects/Order/listViews/View_with_Discount.listView-meta.xml
<ListView>
    <fullName>View_with_Discount</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>AmountAfterDiscount__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Discount__c</columns>
    <filterScope>Mine</filterScope>
    <label>View with Discount</label>
</ListView>